# monitoring-integration-sample

./: .gitignore  CLAUDE.md  DEVICE_IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml  requirements.txt  run_example.py  run_example.sh  virtual_spectrometer.py
.github/workflows/: release-horiba-test.yml  release-optireopt-bridge.yml  release.yml
atmega328p/spectrometer-service/: Cargo.toml  README.md
atmega328p/spectrometer-service/src/: config.rs  error.rs  main.rs
atmega328p/spectrometer-service/src/api/: models.rs  routes.rs
atmega328p/spectrometer-service/src/api/handlers/: device.rs  mod.rs  spectrometer.rs  vacuum_chamber.rs
atmega328p/spectrometer-service/src/data_source/: mod.rs  playback.rs  serial.rs
atmega328p/spectrometer-service/src/monitoring/: client.rs  mod.rs
atmega328p/spectrometer-service/src/processing/: calibration.rs  mod.rs  validation.rs
atmega328p/spectrometer-service/src/processing/outlier/: grubbs.rs  mod.rs
atmega328p/spectrometer-service/src/protocol/: mod.rs  parser.rs  types.rs
atmega328p/spectrometer-service/src/service/: data_loop.rs  mod.rs  state.rs
devices/atmega328p/: Datasheet.docx.md
devices/atmega328p/spectrometer-service/: Cargo.toml  README.md  calibration.toml
devices/atmega328p/spectrometer-service/fixtures/: sample_log.txt
devices/atmega328p/spectrometer-service/src/: config.rs  error.rs  main.rs
devices/atmega328p/spectrometer-service/src/api/: models.rs  routes.rs  web_ui.rs  websocket.rs
devices/horiba/: README.md  center_scan.py  horiba_test.py  pyproject.toml
devices/horiba/horiba_service/: calibration.py  driver.py  main.py  monitoring.py  server.py
devices/horiba/tests/: test_calibration.py  test_driver.py  test_server.py
devices/optireopt-bridge/: Cargo.toml  README.md
devices/optireopt-bridge/src/: config.rs  error.rs  main.rs
devices/optireopt-bridge/src/api/: mod.rs  models.rs  routes.rs  web_ui.rs  websocket.rs
devices/optireopt-bridge/src/api/handlers/: config.rs  device.rs  ingest.rs  mod.rs  vacuum_chamber.rs
devices/optireopt-bridge/src/monitoring/: client.rs
devices/optireopt-bridge/src/service/: source.rs  state.rs
examples/: calibration_demo.py
monitoring/: __init__.py  deps.py  device_registry.py  generate_openapi.py  models.py  server.py  websocket_manager.py
monitoring/routers/: devices.py  monitoring.py  spectrometers.py  vacuum_chambers.py
(+18 files in other folders)
