[package]
name = "spectrometer-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
regex = "1.12.2"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.8.1"
statrs = "0.18.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
approx = "0.5.1"
axum-test = "18.4.1"
tempfile = "3.23.0"
tokio-test = "0.4.4"
tower = "0.5.2"
