[project]
name = "horiba-service"
version = "0.1.0"
description = "HORIBA iHR320 broadband monitoring device service for OptiMonitor"
requires-python = ">=3.11"
dependencies = [
    "horiba-sdk>=0.5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "loguru>=0.7",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pyinstaller>=6.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
