[package]
name = "optireopt-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["json", "ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.4"
